# generate-gitignore

./: CONTRIBUTING.md  README.md  build-requirements.txt  main.py  pyproject.toml  requirements.txt  setup.py  templates.json  update-templates.py
.github/workflows/: build-and-publish.yml  update-templates.yaml
generate_gitignore/: main.py  search.py
generate_readme/: cache.py  main.py
