[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generate-gitignore"
version = "0.1.0"
description = "A tool to generate gitignore files"
authors = [{ name = "Kristián Kunc", email = "kristian@kristn.co.uk" }]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kristiankunc/generate-gitignore"
Repository = "https://github.com/kristiankunc/generate-gitignore"

[tool.hatch.build.targets.wheel]
packages = ["src/generate_gitignore"]
